implement rpc server, now block mode is ok, and binaries of examples run ok.

--- a/rpc_server/BUILD
+++ b/rpc_server/BUILD
@@ -1,7 +1,8 @@
 cc_library(
     name = 'rpc_server',
     srcs = 'rpc_server.cc',
-    deps = ['//base:base',
+    deps = [':rpc_controller',
+            '//base:base',
             '//protorpc/http_server:http_server',
             '//thirdparty/protobuf:protobuf',
             ],
